--- a/styles/main.css
+++ b/styles/main.css
@@ -1,10 +1,221 @@
 * {
   margin: 0;
   padding: 0;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: "Raleway", sans-serif;
 }
 
 ::before,
 ::after {
   box-sizing: border-box;
+}
+
+a {
+  text-decoration: none;
+}
+
+/* ESTILOS DEL HEADER */
+
+.header > .container {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  padding: 0.5rem;
+}
+
+.header__logo__principal {
+  width: 180px;
+  height: 3rem;
+  background-image: url(./../assets/img/logo.svg);
+  background-repeat: no-repeat;
+}
+
+.header__formulario__busquedaa {
+  display: flex;
+}
+
+.input__formulario__busqueda {
+  outline: none;
+  border: none;
+  background-color: rgba(211, 211, 211, 0.268);
+  padding: 0.8rem 1rem 0.8rem 0.8rem;
+  width: 20rem;
+  border-radius: 25px;
+  display: none;
+}
+
+.input__busqueda::placeholder {
+  color: gray;
+}
+
+.bi.bi-search {
+  color: black;
+}
+
+.header__btn__login {
+  width: 5rem;
+  padding: 0.5rem;
+  display: inline-block;
+  text-align: center;
+  text-decoration: none;
+  color: #2a7ae4;
+  border: 1px solid #2a7ae4;
+}
+
+/* ESTILOS DE LA HERO IMAGE SECTION */
+.banner__hero__image {
+  max-width: 100%;
+  height: 15rem;
+  background-image: url(./../assets/img/banner.webp);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  color: white;
+}
+
+.banner__image__info {
+  height: 15rem;
+  position: relative;
+  bottom: -8rem;
+  display: flex;
+  flex-direction: column;
+  gap: 0.3rem;
+  margin-left: 0.5rem;
+}
+
+.banner__hero__btn {
+  width: 8rem;
+  padding: 0.7rem;
+  display: inline-block;
+  text-align: center;
+  text-decoration: none;
+  color: white;
+  background-color: #2a7ae4;
+}
+
+.products__btn {
+  text-decoration: none;
+  color: #2a7ae4;
+  font-weight: bold;
+}
+
+.section__products__header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0.5rem;
+}
+
+.products__container {
+  padding: 0.5rem;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  gap: 2rem;
+}
+
+.product__card {
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+}
+
+.product__card__img__container {
+  width: 10rem;
+  height: 10rem;
+  background: url(./../assets/img/c1.webp);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.product__card__price {
+  font-weight: bold;
+}
+
+.product__card__link {
+  text-decoration: none;
+  color: #2a7ae4;
+  font-weight: bold;
+}
+
+.contacto {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: #eaf2fd;
+  gap: 0.5rem;
+  padding: 1rem;
+}
+
+.contacto__lista {
+  list-style: none;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 0.5rem;
+  margin-bottom: 1rem;
+}
+
+.contacto__link {
+  color: black;
+}
+
+.label__name {
+  display: block;
+  width: 100%;
+  background-color: white;
+  margin-bottom: -3px;
+  color: gray;
+  font-size: 0.8rem;
+  padding: 0.3rem;
+  padding-right: 0;
+}
+
+.label__name:hover {
+  cursor: pointer;
+}
+
+.input__name:focus {
+  outline: none;
+  border-bottom: 2px solid blue;
+}
+
+.input__name {
+  width: 100%;
+  margin: 0;
+  margin-bottom: 2rem;
+  padding-left: 0.3rem;
+  padding-bottom: 0.3rem;
+  border: none;
+  background-color: white;
+  font-size: 1rem;
+  caret-color: #2a7be4b9;
+}
+
+.input__textarea {
+  width: 100%;
+  padding: 0.5rem 0 0 0.3rem;
+  font-size: 1rem;
+  caret-color: #2a7be4b9;
+  border: none;
+  resize: none;
+}
+
+.input__button {
+  width: 40%;
+  margin-top: 2rem;
+  background: #2a7ae4;
+  color: white;
+  border: none;
+  padding: 1rem;
+}
+
+.input__button:hover {
+  cursor: pointer;
+}
+
+.footer {
+  text-align: center;
+  padding: 2rem;
 }
