--- a/styles/main.css
+++ b/styles/main.css
@@ -15,10 +15,10 @@ a {
 
 /* ESTILOS DEL HEADER */
 
-.header > .container {
+.header__container {
   display: flex;
   align-items: center;
-  justify-content: space-around;
+  justify-content: space-between;
   padding: 0.5rem;
 }
 
@@ -29,11 +29,11 @@ a {
   background-repeat: no-repeat;
 }
 
-.header__formulario__busquedaa {
+.header__formulario__busqueda {
   display: flex;
 }
 
-.input__formulario__busqueda {
+.header__input-busqueda {
   outline: none;
   border: none;
   background-color: rgba(211, 211, 211, 0.268);
@@ -43,7 +43,7 @@ a {
   display: none;
 }
 
-.input__busqueda::placeholder {
+.header__input-busqueda::placeholder {
   color: gray;
 }
 
@@ -51,7 +51,7 @@ a {
   color: black;
 }
 
-.header__btn__login {
+.header__btn-login {
   width: 5rem;
   padding: 0.5rem;
   display: inline-block;
@@ -62,7 +62,7 @@ a {
 }
 
 /* ESTILOS DE LA HERO IMAGE SECTION */
-.banner__hero__image {
+.banner {
   max-width: 100%;
   height: 15rem;
   background-image: url(./../assets/img/banner.webp);
@@ -72,25 +72,27 @@ a {
   color: white;
 }
 
-.banner__image__info {
+.banner__image-info {
   height: 15rem;
-  position: relative;
-  bottom: -8rem;
+  margin-left: 0.5rem;
   display: flex;
   flex-direction: column;
+  justify-content: end;
   gap: 0.3rem;
-  margin-left: 0.5rem;
 }
 
-.banner__hero__btn {
+.banner__btn {
   width: 8rem;
   padding: 0.7rem;
+  margin-bottom: 1rem;
   display: inline-block;
   text-align: center;
   text-decoration: none;
   color: white;
   background-color: #2a7ae4;
 }
+
+/* ESTILOS  DE LOS PRODUCTOS */
 
 .products__btn {
   text-decoration: none;
@@ -109,8 +111,7 @@ a {
   padding: 0.5rem;
   display: flex;
   flex-wrap: wrap;
-  justify-content: center;
-  align-items: center;
+  justify-content: space-between;
   gap: 2rem;
 }
 
@@ -120,7 +121,7 @@ a {
   gap: 0.5rem;
 }
 
-.product__card__img__container {
+.product__card__img-container {
   width: 10rem;
   height: 10rem;
   background: url(./../assets/img/c1.webp);
@@ -139,13 +140,16 @@ a {
   font-weight: bold;
 }
 
+/* ESTILOS DEL SECTION CONTACTO */
+
 .contacto {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
   background-color: #eaf2fd;
-  gap: 0.5rem;
   padding: 1rem;
+}
+
+.contacto__logo {
+  display: block;
+  margin: 0 auto;
 }
 
 .contacto__lista {
@@ -176,7 +180,8 @@ a {
   cursor: pointer;
 }
 
-.input__name:focus {
+.input__name:focus,
+.input__textarea:focus {
   outline: none;
   border-bottom: 2px solid blue;
 }
@@ -194,6 +199,7 @@ a {
 }
 
 .input__textarea {
+  outline: none;
   width: 100%;
   padding: 0.5rem 0 0 0.3rem;
   font-size: 1rem;
@@ -206,6 +212,7 @@ a {
   width: 40%;
   margin-top: 2rem;
   background: #2a7ae4;
+  font-size: 1rem;
   color: white;
   border: none;
   padding: 1rem;
@@ -218,4 +225,74 @@ a {
 .footer {
   text-align: center;
   padding: 2rem;
+}
+
+/* ---------------------MEDIA QUERYS------------------------ */
+
+@media screen and (min-width: 0) {
+}
+
+@media screen and (min-width: 768px) {
+  .header__logo__principal {
+    order: 1;
+  }
+  .header__input-busqueda {
+    order: 3;
+    display: block;
+  }
+
+  .header__btn-login {
+    order: 2;
+  }
+
+  .header__label {
+    display: flex;
+    align-items: center;
+  }
+
+  .header__input-busqueda {
+    order: 0;
+  }
+
+  .bi.bi-search {
+    order: 1;
+    margin-left: -2rem;
+    color: gray;
+  }
+  .contacto__container {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+  }
+
+  .contacto__info {
+    margin: 0 auto;
+  }
+
+  .contacto__logo {
+    margin: 0;
+  }
+
+  .contacto__lista {
+    align-items: flex-start;
+    gap: 1rem;
+  }
+
+  .contacto__formulario {
+    grid-column: 2/4;
+  }
+}
+
+@media screen and (min-width: 992px) {
+  .header__container,
+  .banner__image-info,
+  .section__products__header,
+  .products__container,
+  .contacto__formulario {
+    margin: 0 auto;
+    width: 80%;
+  }
+
+  .input__button {
+    width: 30%;
+  }
 }
