--- a/styles/productos.css
+++ b/styles/productos.css
@@ -63,6 +63,62 @@ a {
 
 /* ESTILOS DE LA SECCION DE PRODUCTOS */
 
+.productos {
+  background-color: #f5f5f5;
+  padding: 1rem;
+}
+.productos__header {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.productos__header-btn {
+  display: inline-block;
+  padding: 0.7em;
+  width: 40%;
+  text-align: center;
+  color: white;
+  background-color: #2a7ae4;
+}
+
+.productos__container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  gap: 1rem;
+  margin-top: 1rem;
+}
+/* ESTILOS DE LA CARD DEL PRODUCTO */
+.product__card {
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+}
+
+.product__card__img-container {
+  width: 10rem;
+  height: 10rem;
+  background: url(./../assets/img/c1.webp);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  display: flex;
+  justify-content: end;
+  gap: 3px;
+}
+
+.bi.bi-trash-fill,
+.bi.bi-pencil-fill {
+  color: white;
+  margin: 2px;
+  font-size: 1.3rem;
+}
+
+.product__card__price {
+  font-weight: bold;
+}
+
 /* ESTILOS DEL SECTION CONTACTO */
 
 .contacto {
@@ -183,6 +239,15 @@ a {
     color: gray;
   }
 
+  .productos__header {
+    flex-direction: row;
+    justify-content: space-between;
+  }
+
+  .productos__header-btn {
+    width: 30%;
+  }
+
   .contacto__container {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
@@ -208,9 +273,15 @@ a {
 
 @media screen and (min-width: 992px) {
   .header__container,
-  .contacto__formulario {
+  .contacto__formulario,
+  .productos__container,
+  .productos__header {
     margin: 0 auto;
     width: 80%;
+  }
+
+  .productos__header {
+    margin-bottom: 2rem;
   }
 
   .input__button {
