--- a/styles/nuevo-producto.css
+++ b/styles/nuevo-producto.css
@@ -76,6 +76,7 @@ a {
 
 .section__formulario-nuevo-producto {
   background-color: #f5f5f5;
+  width: 100%;
 }
 
 .formulario__nuevo-producto-title {
