--- a/styles/producto-eliminado.css
+++ b/styles/producto-eliminado.css
@@ -31,6 +31,8 @@ a {
 
 .header__formulario__busqueda {
   display: flex;
+  display: none;
+  background-color: red;
 }
 
 .header__input-busqueda {
@@ -61,142 +63,35 @@ a {
   border: 1px solid #2a7ae4;
 }
 
-/* ESTILOS DEL FORMULARIO DE LOGIN  */
+/* ESTILOS DEL SCREEN REGISTRO COMPLETADO  */
 
-.section__formulario-login {
-  background-color: #f5f5f5;
-}
-
-.section__formulario-login__container {
-  height: 40vh;
+.section__registro-completado {
+  height: 60vh;
   display: flex;
   flex-direction: column;
+  align-items: center;
   justify-content: center;
   gap: 1rem;
 }
 
-.formulario__login-title {
+.bi.bi-trash-fill {
+  color: red;
+  font-size: 5rem;
+}
+
+.registro-completado__btn {
+  padding: 1rem;
+  display: inline-block;
   text-align: center;
-}
-
-.formulario__login {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: 1rem;
-}
-
-.formulario__login__input-email,
-.formulario__login__input-password {
-  width: 70%;
-  display: block;
-  border: none;
-  padding: 0.8rem 0.8rem 0.8rem 0.3rem;
-}
-
-.formulario__login__input-email:focus,
-.formulario__login__input-password {
-  outline: none;
-}
-
-.formulario__login-btn {
-  padding: 0.7em;
-  width: 20%;
-  text-align: center;
+  text-decoration: none;
   color: white;
   background-color: #2a7ae4;
 }
 
-.formulario__login__validacion {
-  display: none;
-  color: red;
-  font-size: 0.7rem;
-  text-decoration: underline;
-}
-
-/* ESTILOS DEL SECTION CONTACTO */
-
-.contacto {
-  background-color: #eaf2fd;
-  padding: 1rem;
-}
-
-.contacto__logo {
-  display: block;
-  margin: 0 auto;
-}
-
-.contacto__lista {
-  list-style: none;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: 0.5rem;
-  margin-bottom: 1rem;
-}
-
-.contacto__link {
-  color: black;
-}
-
-.label__name {
-  display: block;
-  width: 100%;
-  background-color: white;
-  margin-bottom: -3px;
-  color: gray;
-  font-size: 0.8rem;
-  padding: 0.3rem;
-  padding-right: 0;
-}
-
-.label__name:hover {
-  cursor: pointer;
-}
-
-.input__name:focus,
-.input__textarea:focus {
-  outline: none;
-  border-bottom: 2px solid blue;
-}
-
-.input__name {
-  width: 100%;
-  margin: 0;
-  margin-bottom: 2rem;
-  padding-left: 0.3rem;
-  padding-bottom: 0.3rem;
-  border: none;
-  background-color: white;
-  font-size: 1rem;
-  caret-color: #2a7be4b9;
-}
-
-.input__textarea {
-  outline: none;
-  width: 100%;
-  padding: 0.5rem 0 0 0.3rem;
-  font-size: 1rem;
-  caret-color: #2a7be4b9;
-  border: none;
-  resize: none;
-}
-
-.input__button {
-  width: 40%;
-  margin-top: 2rem;
-  background: #2a7ae4;
-  font-size: 1rem;
-  color: white;
-  border: none;
-  padding: 1rem;
-}
-
-.input__button:hover {
-  cursor: pointer;
-}
+/* ESTILOS DEL FOOTER */
 
 .footer {
+  display: none;
   text-align: center;
   padding: 2rem;
 }
@@ -276,5 +171,17 @@ a {
   .formulario__login__input-email,
   .formulario__login__input-password {
     width: 20%;
+  }
+
+  .bi.bi-trash-fill {
+    font-size: 10rem;
+  }
+
+  .registro-completado__titulo {
+    font-size: 6rem;
+  }
+
+  .registro-completado__btn {
+    font-size: 2rem;
   }
 }
