--- a/styles/main.css
+++ b/styles/main.css
@@ -24,6 +24,7 @@ html {
   align-items: center;
   justify-content: space-between;
   padding: 0.5rem;
+  flex-wrap: wrap;
 }
 
 .header__logo__principal {
@@ -38,13 +39,13 @@ html {
 }
 
 .header__input-busqueda {
+  display: block;
   outline: none;
   border: none;
   background-color: rgba(211, 211, 211, 0.268);
   padding: 0.8rem 1rem 0.8rem 0.8rem;
   width: 20rem;
   border-radius: 25px;
-  display: none;
 }
 
 .header__input-busqueda::placeholder {
@@ -53,6 +54,23 @@ html {
 
 .bi.bi-search {
   color: black;
+}
+
+.header__label {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 0 auto;
+}
+
+.header__input-busqueda {
+  order: 0;
+}
+
+.bi.bi-search {
+  order: 1;
+  margin-left: -2rem;
+  color: gray;
 }
 
 .header__btn-login {
